Test/dafny0/EqualityTypes.dfy.expect
EqualityTypes.dfy(34,13): Error: a type declaration that requires equality support cannot be replaced by a codatatype
EqualityTypes.dfy(35,11): Error: type 'Y' is used to refine an opaque type with equality support, but 'Y' does not support equality
EqualityTypes.dfy(40,11): Error: opaque type 'X' is not allowed to be replaced by a type that takes a different number of type parameters (got 1, expected 0)
EqualityTypes.dfy(41,8): Error: opaque type 'Y' is not allowed to be replaced by a class that takes a different number of type parameters (got 1, expected 0)
EqualityTypes.dfy(45,11): Error: type 'X' is used to refine an opaque type with equality support, but 'X' does not support equality
EqualityTypes.dfy(46,11): Error: type 'Y' is used to refine an opaque type with equality support, but 'Y' does not support equality
EqualityTypes.dfy(66,7): Error: == can only be applied to expressions of types that support equality (got Dt<T>)
EqualityTypes.dfy(85,8): Error: type parameter 0 (T) passed to method M must support equality (got _T0) (perhaps try declaring type parameter '_T0' on line 81 as '_T0(==)', which says it can only be instantiated with a type that supports equality)
EqualityTypes.dfy(109,7): Error: == can only be applied to expressions of types that support equality (got D)
EqualityTypes.dfy(114,13): Error: == can only be applied to expressions of types that support equality (got D)
EqualityTypes.dfy(118,16): Error: == can only be applied to expressions of types that support equality (got D)
EqualityTypes.dfy(147,8): Error: set argument type must support equality (got Co)
EqualityTypes.dfy(149,13): Error: type parameter 0 (Y) passed to function G must support equality (got Co)
EqualityTypes.dfy(156,11): Error: set argument type must support equality (got Co)
EqualityTypes.dfy(173,8): Error: set argument type must support equality (got Dt<Co>)
EqualityTypes.dfy(176,8): Error: set argument type must support equality (got Left<Co,int>)
EqualityTypes.dfy(177,8): Error: type parameter 1 (U) passed to type Right must support equality (got Co)
EqualityTypes.dfy(179,8): Error: type parameter 1 (U) passed to type RightExplicit must support equality (got Co)
EqualityTypes.dfy(181,8): Error: set argument type must support equality (got Syn<int,int,Co>)
EqualityTypes.dfy(184,8): Error: set argument type must support equality (got Co)
EqualityTypes.dfy(185,8): Error: set argument type must support equality (got Co)
EqualityTypes.dfy(192,8): Error: set argument type must support equality (got Co)
EqualityTypes.dfy(196,11): Error: set argument type must support equality (got Co)
EqualityTypes.dfy(196,20): Error: set argument type must support equality (got Co)
EqualityTypes.dfy(210,8): Error: set argument type must support equality (got Co)
EqualityTypes.dfy(211,20): Error: set argument type must support equality (got Co)
EqualityTypes.dfy(211,29): Error: set argument type must support equality (got Co)
EqualityTypes.dfy(212,17): Error: set argument type must support equality (got Co)
EqualityTypes.dfy(233,4): Error: type parameter 0 (A) passed to method Explicit must support equality (got Co)
EqualityTypes.dfy(233,13): Error: set argument type must support equality (got Co)
EqualityTypes.dfy(234,19): Error: set argument type must support equality (got Co)
EqualityTypes.dfy(236,4): Error: type parameter 0 (A) passed to method InferEqualitySupportIsRequired must support equality (got Co)
EqualityTypes.dfy(236,35): Error: set argument type must support equality (got Co)
EqualityTypes.dfy(238,24): Error: set argument type must support equality (got Co)
EqualityTypes.dfy(239,21): Error: multiset argument type must support equality (got Co)
EqualityTypes.dfy(241,8): Error: map domain type must support equality (got Co)
EqualityTypes.dfy(241,14): Error: map domain type must support equality (got Co)
37 resolution/type errors detected in EqualityTypes.dfy
